# audio_attack

./: .gitignore  2dolist.txt  README  attack.py  classify.py  ctc.py  make_checkpoint.py  utils.py
myctc/: CMakeLists.txt  _inner_product_grad.py  build.sh  inner_product.cc  inner_product_grad.cc  myctc.cc  test.py  zero_out.cc
